Add requests to framester for wn uri and fix loading of wn enriched csv file + statistics

--- a/script/lexicon_to_wordnet.ipynb
+++ b/script/lexicon_to_wordnet.ipynb
@@ -376,130 +376,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3a14621",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-08T11:55:19.465097Z",
-     "iopub.status.busy": "2023-07-08T11:55:19.464671Z",
-     "iopub.status.idle": "2023-07-08T11:55:53.227832Z",
-     "shell.execute_reply": "2023-07-08T11:55:53.226642Z"
-    },
-    "papermill": {
-     "duration": 33.791122,
-     "end_time": "2023-07-08T11:55:53.230308",
-     "exception": false,
-     "start_time": "2023-07-08T11:55:19.439186",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/tensorflow_io/python/ops/__init__.py:98: UserWarning: unable to load libtensorflow_io_plugins.so: unable to open file: libtensorflow_io_plugins.so, from paths: ['/opt/conda/lib/python3.10/site-packages/tensorflow_io/python/ops/libtensorflow_io_plugins.so']\n",
-      "caused by: ['/opt/conda/lib/python3.10/site-packages/tensorflow_io/python/ops/libtensorflow_io_plugins.so: undefined symbol: _ZN3tsl6StatusC1EN10tensorflow5error4CodeESt17basic_string_viewIcSt11char_traitsIcEENS_14SourceLocationE']\n",
-      "  warnings.warn(f\"unable to load libtensorflow_io_plugins.so: {e}\")\n",
-      "/opt/conda/lib/python3.10/site-packages/tensorflow_io/python/ops/__init__.py:104: UserWarning: file system plugins are not loaded: unable to open file: libtensorflow_io.so, from paths: ['/opt/conda/lib/python3.10/site-packages/tensorflow_io/python/ops/libtensorflow_io.so']\n",
-      "caused by: ['/opt/conda/lib/python3.10/site-packages/tensorflow_io/python/ops/libtensorflow_io.so: undefined symbol: _ZTVN10tensorflow13GcsFileSystemE']\n",
-      "  warnings.warn(f\"file system plugins are not loaded: {e}\")\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75928c693f49405e817f3f3163e9e77a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)lve/main/config.json:   0%|          | 0.00/451 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53b10ce52bbe44b39eba8ebca9dcc270",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading model.safetensors:   0%|          | 0.00/265M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ff33ca6ff5949ac91f51eddf4634ca1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)okenizer_config.json:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d488844d8e7e4259b5cc368d29744a48",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)solve/main/vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf4b7a1023a948f5940515ba9c619d15",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Answer: 'sing by changing register', score: 0.451, start: 1, end: 26\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pyspark.sql.functions import col\n",
-    "from transformers import pipeline\n",
-    "question_answerer = pipeline(\"question-answering\", model='distilbert-base-uncased-distilled-squad')\n",
-    "\n",
-    "context = r\"\"\"\n",
-    "sing by changing register; sing by yodeling\n",
-    "\"\"\"\n",
-    "\n",
-    "result = question_answerer(question=\"What is a belonging lemmata?\", context=context)\n",
-    "print(f\"Answer: '{result['answer']}', score: {round(result['score'], 4)}, start: {result['start']}, end: {result['end']}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "6f74add4",
    "metadata": {
@@ -1637,8 +1513,7 @@
     }
    ],
    "source": [
-    "!pip install --upgrade nltk\n",
-    "!pip list"
+    "!pip install --upgrade nltk"
    ]
   },
   {
@@ -2743,11 +2618,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_cd95e762851a493eb03d6726b5541abc",
-       "max": 112.0,
-       "min": 0.0,
+       "max": 112,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_70740d8aacf44c6593d810b4cc62e6d6",
-       "value": 112.0
+       "value": 112
       }
      },
      "0d4b395621f34926b2cee87e01cc3f9d": {
@@ -2862,11 +2737,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_6d590974ba28481f991c4f800a175f01",
-       "max": 350.0,
-       "min": 0.0,
+       "max": 350,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_61bd5a4335ca40e78d8960866f09afd4",
-       "value": 350.0
+       "value": 350
       }
      },
      "11b2e1339e0e45d1ba7f7c51f00ad3eb": {
@@ -2938,11 +2813,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_6763f06c4b8b4050bdf3d009cfb065e9",
-       "max": 39265.0,
-       "min": 0.0,
+       "max": 39265,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_56d66c9f429444c094eb472e38043673",
-       "value": 39265.0
+       "value": 39265
       }
      },
      "1230fc8c6bc74ee5bc715b9e5e8d6f67": {
@@ -3185,11 +3060,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_8f79d83fb8164b71962766a58b28f549",
-       "max": 349.0,
-       "min": 0.0,
+       "max": 349,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_da21163a764248c5ba9d77096d9f3740",
-       "value": 349.0
+       "value": 349
       }
      },
      "1b6b146cc9f14d72bf9fce21a0f46ce6": {
@@ -3749,11 +3624,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_20bcb6c41fb149a4b8e5e26e1bbdb3a4",
-       "max": 265470036.0,
-       "min": 0.0,
+       "max": 265470036,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_aa80cce3b1464f3ba87637a65a9aedab",
-       "value": 265470036.0
+       "value": 265470036
       }
      },
      "26fd1e00e8b946a1bf640e43e6490814": {
@@ -3818,11 +3693,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_7fa68bba9e644f599002196dc3dbddec",
-       "max": 451.0,
-       "min": 0.0,
+       "max": 451,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_416831cfd5a94668acc9d93eb2f0eea5",
-       "value": 451.0
+       "value": 451
       }
      },
      "2db63d96248242ba909dec69a1c5a89f": {
@@ -4394,11 +4269,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_c9ff0f82ec7b42f1a39ac8a8bd130eea",
-       "max": 612.0,
-       "min": 0.0,
+       "max": 612,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_a5ee1af83e224a9c96d35d4f080d9c4f",
-       "value": 612.0
+       "value": 612
       }
      },
      "3cc9f8fc737046adbe70a5f4f87a6733": {
@@ -4491,11 +4366,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2dce236c762543d6a5bcda9de9762d05",
-       "max": 116.0,
-       "min": 0.0,
+       "max": 116,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_df403b25c7d34eb1bdc70af32efe199f",
-       "value": 116.0
+       "value": 116
       }
      },
      "3df1b42949e44e95818e96eecc125d10": {
@@ -4588,11 +4463,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1d252700b2e44d968152a254c8b9756d",
-       "max": 466247.0,
-       "min": 0.0,
+       "max": 466247,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_72ed674f08d44ab79222e25b5e5f89ac",
-       "value": 466247.0
+       "value": 466247
       }
      },
      "3f79f700f1e042fb9d4721f61b37d054": {
@@ -5167,11 +5042,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_462db6d86b254e4aa5967b8804795f5f",
-       "max": 53.0,
-       "min": 0.0,
+       "max": 53,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_1be8aafa5d874cc89a04d247d76e17bb",
-       "value": 53.0
+       "value": 53
       }
      },
      "53b10ce52bbe44b39eba8ebca9dcc270": {
@@ -5763,11 +5638,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_99065e7293c44436bc28ecae9e7b7d55",
-       "max": 643.0,
-       "min": 0.0,
+       "max": 643,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8466476efd3e48d5818e9955e1fb9452",
-       "value": 643.0
+       "value": 643
       }
      },
      "6b207c0d5f9d4ebaa02063dc62b97f78": {
@@ -5907,11 +5782,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_c42fd567c5fd47e28607289667c85302",
-       "max": 231508.0,
-       "min": 0.0,
+       "max": 231508,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_04cd953ec6a141acb41b000635846683",
-       "value": 231508.0
+       "value": 231508
       }
      },
      "7162e8c1c7e64caf945c8d35b3ee623d": {
@@ -5931,11 +5806,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_418ee1f8977148b19903140b7a0fb3f7",
-       "max": 13156.0,
-       "min": 0.0,
+       "max": 13156,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_a41e175d1a1c4ec1b68b3c52b5276275",
-       "value": 13156.0
+       "value": 13156
       }
      },
      "72ed674f08d44ab79222e25b5e5f89ac": {
@@ -6153,11 +6028,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_249cae5079b647b7b9577cb4ffba6e0b",
-       "max": 28.0,
-       "min": 0.0,
+       "max": 28,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_b32be96fcfd7456da197288ec76ad528",
-       "value": 28.0
+       "value": 28
       }
      },
      "82f7a33d271e4b94b66a9c88c597210c": {
@@ -7498,11 +7373,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_35925ec83f084b79b8fc62c45e225205",
-       "max": 10610.0,
-       "min": 0.0,
+       "max": 10610,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_a8abac5d65b94144a942a4fa9959f6cc",
-       "value": 10610.0
+       "value": 10610
       }
      },
      "bdbba58b75474ebc8977d03f9cf80e1b": {
@@ -7522,11 +7397,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_47e2c96cf5894eb6afa5b110f39fb21f",
-       "max": 466062.0,
-       "min": 0.0,
+       "max": 466062,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d2e01627a9504b0caba1c7262361617e",
-       "value": 466062.0
+       "value": 466062
       }
      },
      "be45cba6234f470c99148f361a215fd3": {
@@ -7597,11 +7472,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_98a7f26476d94656b9420707f933b7fa",
-       "max": 3677.0,
-       "min": 0.0,
+       "max": 3677,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_90944f3642f54641bc033226ec5ec652",
-       "value": 3677.0
+       "value": 3677
       }
      },
      "c025376573ec4ba2afac0f4f3cc10808": {
@@ -7894,11 +7769,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_ded510b0bf3c4338bdf49fbffa078210",
-       "max": 90888945.0,
-       "min": 0.0,
+       "max": 90888945,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_486a25581969416a92581b2385c6cd4c",
-       "value": 90888945.0
+       "value": 90888945
       }
      },
      "ca8c9640c3c5482fa989c07388b42dda": {
@@ -7991,11 +7866,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2418241b58e748ef950b4e1af45cf3f6",
-       "max": 1175.0,
-       "min": 0.0,
+       "max": 1175,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8b303a98cbcd45eea87f286c242a4169",
-       "value": 1175.0
+       "value": 1175
       }
      },
      "cd95e762851a493eb03d6726b5541abc": {
@@ -8747,11 +8622,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_5f1d2bac6d8e467fbe883d4937977141",
-       "max": 190.0,
-       "min": 0.0,
+       "max": 190,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f545bf688fb34c3f8658106f8381646f",
-       "value": 190.0
+       "value": 190
       }
      },
      "e2da8f9ecc624fe89b8e4dc35cd6171e": {
@@ -9361,11 +9236,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_e7782801e5194943b945e2c550b22c16",
-       "max": 231508.0,
-       "min": 0.0,
+       "max": 231508,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f032f5235a6046938573ec18fd096940",
-       "value": 231508.0
+       "value": 231508
       }
      },
      "fd7906ff36cf4e05b3e69fed974ecbb4": {
